# tic-tac-toe-c

./: .SRCINFO  .dockerignore  .editorconfig  .gitignore  Dockerfile  Makefile  Makefile.in  PKGBUILD  README.md  bootstrap.sh  configure  configure.ac  configure~  docker-compose.yml  shell.nix
include/: board.h  core.h  game.h  hello.h  input.h  platform.h  render.h  types.h
src/: board.c  core.c  game.c  input.c  main.c  platform.c  render.c
src/wasm/: shell.html
